перенос реквестов и data
