# app/Http/Requests/Auth/LoginRequest.php
@@ -1,38 +1,0 @@
-<?php
-
-namespace App\Http\Requests\Auth;
-
-use Illuminate\Contracts\Validation\Validator;
-use Illuminate\Foundation\Http\FormRequest;
-use Illuminate\Http\Exceptions\HttpResponseException;
-use Illuminate\Http\JsonResponse;
-
-class LoginRequest extends FormRequest
-{
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    public function rules(): array
-    {
-        return [
-            'email'    => ['required', 'email','exists:users,email'],
-            'password' => ['required', 'string', 'min:6'],
-        ];
-    }
-
-
-
-    /**
-     * Обработка неудачной валидации для API
-     */
-    protected function failedValidation(Validator $validator)
-    {
-        throw new HttpResponseException(
-            response()->json([
-                'errors' => $validator->getMessageBag(),
-            ], 422) 
-        );
-    }
-}
